--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ default_lang: en
 default_body_class: list
 
 author:
-    name: Yours Truly
-    # url:  http://example.com/
-    company:
-        name: Famous Inc.
+    name: Fabio Collini
+    url:  http://www.cosenonjaviste.it/
+    #company:
+        #name: Famous Inc.
         # url:  http://example.com/
 
 fork_url: https://github.com/shower/shower
