--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
         <activity android:name=".Activity02MultipleCalls" />
         <activity android:name=".Activity03Callbacks" />
         <activity android:name=".Activity04Rx" />
-        <activity android:name=".Activity05RxMultipleCalls" />
+        <activity android:name=".Activity05RxFlatMap" />
+        <activity android:name=".Activity06RxConcatMap" />
+        <activity android:name=".Activity07RxZip" />
+        <activity android:name=".Activity08RxErrors" />
     </application>
 
 </manifest>
